Update the mobile css for the demo page, and fixed the new players label being misaligned in desktop mode

--- a/website/public/css/demo-page.css
+++ b/website/public/css/demo-page.css
@@ -473,7 +473,7 @@
 .switch-container {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
 }
 
 .switch {
